--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
 
     //gson to parse json to model
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
