--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    //add shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
 }
