--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
+
 }
 
 dependencies {
@@ -39,7 +44,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -69,4 +75,8 @@ dependencies {
 
     //add shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
+
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.1")
+    testImplementation "org.mockito:mockito-core:3.+"
+    androidTestImplementation 'androidx.test:core:1.4.0'
 }
